--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     height: 100vh;
     background-color: hsl(212, 45%, 89%);
     font-family: 'Outfit', sans-serif;
+    overflow-y: hidden;
 }
 
 #conteudo{
